--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Run tests
+        run: go test -race -vet=off ./...
 
       - name: Checkout code
         uses: actions/checkout@v3
