--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 
 # Копируем go.mod и go.sum и загружаем зависимости
 COPY ../../go.* .
+COPY . .
 RUN go mod download
 
 # Копируем исходный код
