--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -4,13 +4,13 @@ FROM golang:1.23 as builder
 WORKDIR /app
 
 # Копируем go.mod и go.sum и загружаем зависимости
-COPY ../../go.* .
+COPY go.* .
 COPY . .
 RUN go mod download
 
 # Копируем исходный код
-COPY ../../cmd/. cmd/
-COPY ../../internal/. internal/
+COPY cmd/ cmd/
+COPY /internal/ internal/
 
 # Открываем порт 8080
 EXPOSE 8080
