--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,8 @@ jobs:
         run: go mod tidy
 
       - name: Run tests
-        run: go test ./...
+        working-directory: cmd/app
+        run: go test -race -vet=off ./...
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
