--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,13 @@ jobs:
         working-directory: cmd/app
         run: go test -race -vet=off ./...
 
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+
+      - name: Run golangci-lint
+        run: golangci-lint run ./...
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
